# data-pipeline-cli

./: .gitignore  01_feature_profiling.py  PR_Description_Eng_v2.md  README.md  pyproject.toml
src/datapipe/: config.py  exceptions.py  main.py
src/datapipe/connectors/: base.py  factory.py  oracle.py  postgres.py
src/datapipe/domain/: interfaces.py  models.py
src/datapipe/etl/: extractor.py  loader.py  pipeline.py  transformer.py
src/datapipe/inspector/: __init__.py  checker.py  crawler.py
src/datapipe/quality/: engine.py  reader.py
src/datapipe/quality/rules/: __init__.py  missing.py  outlier.py
tests/: test_connector_safety.py
